feat: Criado component DiceRolling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,5 +39,8 @@
   },
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
+  },
+  "[scss]": {
+    "editor.defaultFormatter": "sibiraj-s.vscode-scss-formatter"
   }
 }
