--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -10,6 +10,7 @@
     "@capacitor/app": "^5.0.0",
     "@capacitor/cli": "^5.0.0",
     "@capacitor/core": "^5.0.0",
-    "@capacitor/status-bar": "^5.0.6"
+    "@capacitor/status-bar": "^5.0.6",
+    "@hugotomazi/capacitor-navigation-bar": "^2.0.1"
   }
 }
