--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/status-bar": "^5.0.6",
     "@hugotomazi/capacitor-navigation-bar": "^2.0.1",
     "@quasar/extras": "^1.16.4",
+    "@vercel/speed-insights": "^1.0.9",
     "axios": "^1.2.1",
     "firebase": "^10.5.0",
     "pinia": "^2.0.11",
